chore(docker): mount part64 root to /app for live updates

--- a/part64/docker-compose.yml
+++ b/part64/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - "8787:8787"
       - "8793:8793"
     volumes:
+      - .:/app
       - ./world_state:/app/world_state
       - ../.opencode/runtime:/app/.opencode/runtime:ro
       - ../:/vault
