--- a/part64/frontend/package.json
+++ b/part64/frontend/package.json
@@ -7,7 +7,14 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 electron ./electron/main.mjs",
+    "electron:start": "electron ./electron/main.mjs",
+    "electron:preview": "npm run build && npm run electron:start",
+    "pm2:electron:start": "pm2 startOrRestart ./ecosystem.electron.config.cjs --only eta-mu-electron-client --update-env",
+    "pm2:electron:stop": "pm2 stop eta-mu-electron-client",
+    "pm2:electron:status": "pm2 status eta-mu-electron-client",
+    "pm2:electron:delete": "pm2 delete eta-mu-electron-client"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -25,6 +32,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
+    "electron": "^37.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
