--- a/part64/docker-compose.yml
+++ b/part64/docker-compose.yml
@@ -17,13 +17,28 @@ services:
       PYTHONUNBUFFERED: "1"
       WEAVER_HOST: "0.0.0.0"
       WEAVER_PORT: "8793"
-      OLLAMA_BASE_URL: "http://host.docker.internal:11434"
+      OLLAMA_BASE_URL: "http://host.docker.internal:11435"
       OLLAMA_MODEL: "qwen3-vl:4b-instruct"
-      EMBEDDINGS_BACKEND: "tensorflow"
+      OLLAMA_EMBED_MODEL: "nomic-embed-text"
+      OLLAMA_EMBED_FORCE_NOMIC: "1"
+      OLLAMA_EMBED_NUM_CTX: "512"
+      OLLAMA_EMBED_MAX_CHARS: "2400"
+      OPENVINO_EMBED_ENDPOINT: "http://host.docker.internal:18000/v1/embeddings"
+      OPENVINO_EMBED_MODEL: "nomic-embed-text"
+      OPENVINO_EMBED_DEVICE: "NPU"
+      OPENVINO_EMBED_TIMEOUT_SEC: "10"
+      OPENVINO_EMBED_MAX_CHARS: "2400"
+      ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
+      ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
+      WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
+      WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
+      WEAVER_LLM_TIMEOUT_MS: "30000"
+      EMBEDDINGS_BACKEND: "ollama"
       TEXT_GENERATION_BACKEND: "tensorflow"
       TF_EMBED_HASH_BINS: "768"
     depends_on:
       - chroma
+      - ollama-loopback-proxy
     ports:
       - "8787:8787"
       - "8793:8793"
@@ -54,4 +69,10 @@ services:
       - ./world_state/chroma_data:/chroma/chroma
     environment:
       IS_PERSISTENT: "TRUE"
+    restart: unless-stopped
+
+  ollama-loopback-proxy:
+    image: alpine/socat:latest
+    network_mode: host
+    command: ["-d", "-d", "TCP-LISTEN:11435,reuseaddr,fork", "TCP:127.0.0.1:11434"]
     restart: unless-stopped
