feat(frontend): sustain operator orientation under state complexity
As telemetry and interaction density increase, operators need clearer mental models to make safe decisions in real time. Prioritizing legibility and control in the interface is necessary to reduce avoidable errors during continuous runtime supervision.

--- a/part64/frontend/package.json
+++ b/part64/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "electron:dev": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 electron ./electron/main.mjs",
+    "electron:dev:watch": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 nodemon --watch electron --ext mjs,js,cjs --signal SIGTERM --exec \"electron ./electron/main.mjs\"",
     "electron:start": "electron ./electron/main.mjs",
     "electron:preview": "npm run build && npm run electron:start",
     "pm2:electron:start": "pm2 startOrRestart ./ecosystem.electron.config.cjs --only eta-mu-electron-client --update-env",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
