--- a/part64/docker-compose.muse-song-lab.yml
+++ b/part64/docker-compose.muse-song-lab.yml
@@ -19,7 +19,7 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "ollama"
       TF_EMBED_HASH_BINS: "768"
       OMP_NUM_THREADS: "1"
@@ -95,7 +95,7 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "ollama"
       TF_EMBED_HASH_BINS: "768"
       OMP_NUM_THREADS: "1"
@@ -171,7 +171,7 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "ollama"
       TF_EMBED_HASH_BINS: "768"
       OMP_NUM_THREADS: "1"
