--- a/part64/docker-compose.sim-slice-bench.yml
+++ b/part64/docker-compose.sim-slice-bench.yml
@@ -33,7 +33,7 @@ services:
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "ollama"
       TF_EMBED_HASH_BINS: "768"
       SIMULATION_HTTP_CACHE_SECONDS: "0.5"
@@ -110,20 +110,21 @@ services:
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "ollama"
       TF_EMBED_HASH_BINS: "768"
+      DOCKER_SIMULATION_RESOURCE_WORKERS: "10"
       SIMULATION_HTTP_CACHE_SECONDS: "0.5"
       SIM_SLICE_OFFLOAD_MODE: "local"
       SIM_PARTICLE_BACKEND: "cdb"
-      MAX_SIM_POINTS: "640"
-      ETA_MU_MAX_GRAPH_FILES: "220"
-      WEAVER_GRAPH_NODE_LIMIT: "220"
-      WEAVER_GRAPH_EDGE_LIMIT: "420"
-      WEAVER_SEMANTIC_ANALYSIS_ENABLED: "0"
-      WEAVER_ACTIVE_SEARCH_ENABLED: "0"
-      SIMULATION_FILE_GRAPH_PROJECTION_EDGE_THRESHOLD: "180"
-      SIMULATION_FILE_GRAPH_PROJECTION_EDGE_CAP_MAX: "280"
+      MAX_SIM_POINTS: "2048"
+      ETA_MU_MAX_GRAPH_FILES: "1200"
+      WEAVER_GRAPH_NODE_LIMIT: "900"
+      WEAVER_GRAPH_EDGE_LIMIT: "2200"
+      WEAVER_SEMANTIC_ANALYSIS_ENABLED: "1"
+      WEAVER_ACTIVE_SEARCH_ENABLED: "1"
+      SIMULATION_FILE_GRAPH_PROJECTION_EDGE_THRESHOLD: "340"
+      SIMULATION_FILE_GRAPH_PROJECTION_EDGE_CAP_MAX: "860"
     labels:
       io.fork_tales.simulation: "true"
       io.fork_tales.simulation.role: "experiment"
@@ -196,7 +197,7 @@ services:
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "tensorflow"
       TF_EMBED_HASH_BINS: "768"
       SIM_SLICE_OFFLOAD_MODE: "redis"
@@ -280,7 +281,7 @@ services:
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
-      EMBEDDINGS_BACKEND: "ollama"
+      EMBEDDINGS_BACKEND: "openvino"
       TEXT_GENERATION_BACKEND: "tensorflow"
       TF_EMBED_HASH_BINS: "768"
       SIM_SLICE_OFFLOAD_MODE: "uds"
