--- a/part64/frontend/tsconfig.app.json
+++ b/part64/frontend/tsconfig.app.json
@@ -18,6 +18,8 @@
 
     /* Linting */
     "strict": true,
+    "noImplicitReturns": true,
+    "noImplicitOverride": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
