--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "live": "node cli/live-choir.mjs",
     "fork-tax:audit": "node contracts/contract_fork_tax_git_v1.mjs --audit",
     "fork-tax:cycle": "node contracts/contract_fork_tax_git_v1.mjs --cycle",
-    "fork-tax:test": "node contracts/contract_fork_tax_git_v1.mjs --test"
+    "fork-tax:test": "node contracts/contract_fork_tax_git_v1.mjs --test",
+    "lint:py-c": "python part64/scripts/python_c_quality_gate.py --mode warn",
+    "lint:py-c:strict": "python part64/scripts/python_c_quality_gate.py --mode strict"
   },
   "bin": {
     "frame-firewall": "./cli/frame-firewall.mjs",
