--- a/part64/frontend/.gitignore
+++ b/part64/frontend/.gitignore
@@ -10,7 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+coverage
 *.local
+playwright-report
+test-results
 
 # Editor directories and files
 .vscode/*
