--- a/part64/frontend/package.json
+++ b/part64/frontend/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "typecheck": "tsc -b --pretty false",
     "lint": "eslint .",
+    "lint:strict": "npm run typecheck && npm run lint && eslint . --config eslint.config.strict.js --max-warnings 0",
+    "test": "vitest run --exclude e2e/**",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:coverage": "vitest run --coverage --exclude e2e/**",
+    "test:watch": "vitest --exclude e2e/**",
     "preview": "vite preview",
     "electron:dev": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 electron ./electron/main.mjs",
     "electron:dev:watch": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 nodemon --watch electron --ext mjs,js,cjs --signal SIGTERM --exec \"electron ./electron/main.mjs\"",
@@ -28,21 +35,28 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.58.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.24",
     "electron": "^37.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-sonarjs": "^4.0.0",
     "globals": "^16.5.0",
+    "jsdom": "^28.1.0",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
