--- a/part64/frontend/tsconfig.node.json
+++ b/part64/frontend/tsconfig.node.json
@@ -16,6 +16,8 @@
 
     /* Linting */
     "strict": true,
+    "noImplicitReturns": true,
+    "noImplicitOverride": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
