--- a/part64/nginx/default.conf
+++ b/part64/nginx/default.conf
@@ -9,8 +9,8 @@ server {
 
     resolver 127.0.0.11 ipv6=off valid=10s;
 
-    set $world_backend "eta-mu-system:8787";
-    set $weaver_backend "eta-mu-system:8793";
+    set $world_backend "eta-mu-cdb:8787";
+    set $weaver_backend "eta-mu-cdb:8793";
 
     client_max_body_size 64m;
 
