feat(sim,bench): advance simulation engine and benchmark infrastructure
Enhance C double buffer backend with Nooi field dynamics, expand
Daimoi probabilistic system, add comprehensive benchmark runner
with NPU embedding support, refactor Canvas component for clarity,
and document benchmark workflows. Includes test coverage and
receipts for traceability.

--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,7 @@ part64/bench_embed_native_ov
 part64/onnxruntime-linux-*.tgz
 part64/onnxruntime-linux-*/
 part64/runs/
+part64/code/world_web/native/libc_embed_runtime.so
+part64/code/world_web/native/libc_embed_runtime.buildinfo
 part64/frontend/coverage/
 session-ses_*.md
