--- a/part64/Dockerfile.system
+++ b/part64/Dockerfile.system
@@ -1,4 +1,4 @@
-FROM node:20-bookworm-slim
+FROM python:3.12-slim-trixie
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
@@ -6,14 +6,18 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends python3 python3-pip espeak-ng redis-tools gcc libc6-dev procps \
+    && apt-get install -y --no-install-recommends nodejs npm espeak-ng redis-tools gcc g++ libc6-dev procps patchelf libze1 libtbb12 \
     && npm install -g pm2 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY code/package.json code/package-lock.json /app/code/
 RUN npm --prefix /app/code ci --omit=dev
 
-RUN pip3 install --no-cache-dir --break-system-packages chromadb psutil tensorflow-cpu==2.16.1
+RUN pip3 install --no-cache-dir chromadb psutil tensorflow-cpu==2.16.1 onnxruntime-openvino==1.22.0 "tokenizers>=0.20.3" \
+    && (pip3 uninstall -y onnxruntime || true) \
+    && pip3 install --no-cache-dir --force-reinstall --no-deps onnxruntime-openvino==1.22.0 \
+    && python3 -c "from pathlib import Path; import subprocess; capi=Path('/usr/local/lib/python3.12/site-packages/onnxruntime/capi'); raw=list(capi.glob('onnxruntime_pybind11_state*.so'))+list(capi.glob('libonnxruntime.so*')); targets=sorted({str(path.resolve()) for path in raw if path.exists()}); [subprocess.run(['patchelf','--clear-execstack',path], check=True) for path in targets]; assert targets" \
+    && python3 -c "import onnxruntime as ort; p=ort.get_available_providers(); assert 'OpenVINOExecutionProvider' in p, p"
 
 COPY . /app
 
