--- a/part64/docker-compose.sim-slice-bench.yml
+++ b/part64/docker-compose.sim-slice-bench.yml
@@ -19,6 +19,9 @@ services:
       WEAVER_PORT: "8793"
       OLLAMA_BASE_URL: "http://host.docker.internal:11435"
       OLLAMA_MODEL: "qwen3-vl:4b-instruct"
+      OLLAMA_TIMEOUT_SEC: "${OLLAMA_TIMEOUT_SEC:-4}"
+      OLLAMA_NUM_GPU: "${OLLAMA_NUM_GPU:-1}"
+      OLLAMA_MAIN_GPU: "${OLLAMA_MAIN_GPU:-0}"
       OLLAMA_EMBED_MODEL: "nomic-embed-text"
       OLLAMA_EMBED_FORCE_NOMIC: "1"
       OLLAMA_EMBED_NUM_CTX: "512"
@@ -28,15 +31,26 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
+      OPENVINO_EMBED_API_KEY: "${OPENVINO_EMBED_API_KEY:-}"
+      OPENVINO_EMBED_API_KEY_HEADER: "X-API-Key"
+      OPENVINO_EMBED_BEARER_TOKEN: "${OPENVINO_EMBED_BEARER_TOKEN:-}"
       ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
       ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
       EMBEDDINGS_BACKEND: "openvino"
-      TEXT_GENERATION_BACKEND: "ollama"
+      CDB_EMBED_IN_C: "1"
+      CDB_EMBED_REQUIRE_C: "1"
+      CDB_EMBED_DEVICE: "AUTO"
+      CDB_EMBED_STRICT_DEVICE: "1"
+      CDB_EMBED_PRELOAD_ORT_CORE: "1"
+      NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
+      NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
+      TEXT_GENERATION_BACKEND: "auto"
       TF_EMBED_HASH_BINS: "768"
       SIMULATION_HTTP_CACHE_SECONDS: "0.5"
+      SIM_PARTICLE_BACKEND: "cdb"
       SIM_SLICE_OFFLOAD_MODE: "local"
     labels:
       io.fork_tales.simulation: "true"
@@ -50,14 +64,20 @@ services:
       - "18877:8787"
       - "18993:8793"
     cpus: "0.95"
-    mem_limit: "7000m"
-    memswap_limit: "7000m"
+    mem_limit: "24000m"
+    memswap_limit: "24000m"
     pids_limit: 176
+    gpus: all
+    devices:
+      - "/dev/accel:/dev/accel"
+      - "/dev/dri:/dev/dri"
     volumes:
       - .:/app
       - eta_mu_local_world_state:/app/world_state
       - ../.opencode/runtime:/app/.opencode/runtime:ro
       - ../:/vault
+      - /usr/lib/x86_64-linux-gnu/libze_intel_npu.so:/usr/lib/x86_64-linux-gnu/libze_intel_npu.so:ro
+      - /usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:/usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
@@ -96,6 +116,9 @@ services:
       WEAVER_PORT: "8793"
       OLLAMA_BASE_URL: "http://host.docker.internal:11435"
       OLLAMA_MODEL: "qwen3-vl:4b-instruct"
+      OLLAMA_TIMEOUT_SEC: "${OLLAMA_TIMEOUT_SEC:-4}"
+      OLLAMA_NUM_GPU: "${OLLAMA_NUM_GPU:-1}"
+      OLLAMA_MAIN_GPU: "${OLLAMA_MAIN_GPU:-0}"
       OLLAMA_EMBED_MODEL: "nomic-embed-text"
       OLLAMA_EMBED_FORCE_NOMIC: "1"
       OLLAMA_EMBED_NUM_CTX: "512"
@@ -105,13 +128,23 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
+      OPENVINO_EMBED_API_KEY: "${OPENVINO_EMBED_API_KEY:-}"
+      OPENVINO_EMBED_API_KEY_HEADER: "X-API-Key"
+      OPENVINO_EMBED_BEARER_TOKEN: "${OPENVINO_EMBED_BEARER_TOKEN:-}"
       ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
       ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
       EMBEDDINGS_BACKEND: "openvino"
-      TEXT_GENERATION_BACKEND: "ollama"
+      CDB_EMBED_IN_C: "1"
+      CDB_EMBED_REQUIRE_C: "1"
+      CDB_EMBED_DEVICE: "AUTO"
+      CDB_EMBED_STRICT_DEVICE: "1"
+      CDB_EMBED_PRELOAD_ORT_CORE: "1"
+      NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
+      NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
+      TEXT_GENERATION_BACKEND: "auto"
       TF_EMBED_HASH_BINS: "768"
       DOCKER_SIMULATION_RESOURCE_WORKERS: "10"
       SIMULATION_HTTP_CACHE_SECONDS: "0.5"
@@ -140,11 +173,17 @@ services:
     mem_limit: "24000m"
     memswap_limit: "24000m"
     pids_limit: 1024
+    gpus: all
+    devices:
+      - "/dev/accel:/dev/accel"
+      - "/dev/dri:/dev/dri"
     volumes:
       - .:/app
       - eta_mu_cdb_world_state:/app/world_state
       - ../.opencode/runtime:/app/.opencode/runtime:ro
       - ../:/vault
+      - /usr/lib/x86_64-linux-gnu/libze_intel_npu.so:/usr/lib/x86_64-linux-gnu/libze_intel_npu.so:ro
+      - /usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:/usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
@@ -183,6 +222,9 @@ services:
       WEAVER_PORT: "8793"
       OLLAMA_BASE_URL: "http://host.docker.internal:11435"
       OLLAMA_MODEL: "qwen3-vl:4b-instruct"
+      OLLAMA_TIMEOUT_SEC: "${OLLAMA_TIMEOUT_SEC:-4}"
+      OLLAMA_NUM_GPU: "${OLLAMA_NUM_GPU:-1}"
+      OLLAMA_MAIN_GPU: "${OLLAMA_MAIN_GPU:-0}"
       OLLAMA_EMBED_MODEL: "nomic-embed-text"
       OLLAMA_EMBED_FORCE_NOMIC: "1"
       OLLAMA_EMBED_NUM_CTX: "512"
@@ -192,14 +234,25 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
+      OPENVINO_EMBED_API_KEY: "${OPENVINO_EMBED_API_KEY:-}"
+      OPENVINO_EMBED_API_KEY_HEADER: "X-API-Key"
+      OPENVINO_EMBED_BEARER_TOKEN: "${OPENVINO_EMBED_BEARER_TOKEN:-}"
       ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
       ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
       EMBEDDINGS_BACKEND: "openvino"
-      TEXT_GENERATION_BACKEND: "tensorflow"
+      CDB_EMBED_IN_C: "1"
+      CDB_EMBED_REQUIRE_C: "1"
+      CDB_EMBED_DEVICE: "AUTO"
+      CDB_EMBED_STRICT_DEVICE: "1"
+      CDB_EMBED_PRELOAD_ORT_CORE: "1"
+      NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
+      NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
+      TEXT_GENERATION_BACKEND: "auto"
       TF_EMBED_HASH_BINS: "768"
+      SIM_PARTICLE_BACKEND: "cdb"
       SIM_SLICE_OFFLOAD_MODE: "redis"
       SIM_SLICE_REDIS_HOST: "sim-slice-redis"
       SIM_SLICE_REDIS_PORT: "6379"
@@ -221,14 +274,20 @@ services:
       - "18878:8787"
       - "18994:8793"
     cpus: "1.05"
-    mem_limit: "3200m"
-    memswap_limit: "3200m"
+    mem_limit: "24000m"
+    memswap_limit: "24000m"
     pids_limit: 188
+    gpus: all
+    devices:
+      - "/dev/accel:/dev/accel"
+      - "/dev/dri:/dev/dri"
     volumes:
       - .:/app
       - eta_mu_redis_world_state:/app/world_state
       - ../.opencode/runtime:/app/.opencode/runtime:ro
       - ../:/vault
+      - /usr/lib/x86_64-linux-gnu/libze_intel_npu.so:/usr/lib/x86_64-linux-gnu/libze_intel_npu.so:ro
+      - /usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:/usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
@@ -267,6 +326,9 @@ services:
       WEAVER_PORT: "8793"
       OLLAMA_BASE_URL: "http://host.docker.internal:11435"
       OLLAMA_MODEL: "qwen3-vl:4b-instruct"
+      OLLAMA_TIMEOUT_SEC: "${OLLAMA_TIMEOUT_SEC:-4}"
+      OLLAMA_NUM_GPU: "${OLLAMA_NUM_GPU:-1}"
+      OLLAMA_MAIN_GPU: "${OLLAMA_MAIN_GPU:-0}"
       OLLAMA_EMBED_MODEL: "nomic-embed-text"
       OLLAMA_EMBED_FORCE_NOMIC: "1"
       OLLAMA_EMBED_NUM_CTX: "512"
@@ -276,14 +338,25 @@ services:
       OPENVINO_EMBED_DEVICE: "NPU"
       OPENVINO_EMBED_TIMEOUT_SEC: "10"
       OPENVINO_EMBED_MAX_CHARS: "2400"
+      OPENVINO_EMBED_API_KEY: "${OPENVINO_EMBED_API_KEY:-}"
+      OPENVINO_EMBED_API_KEY_HEADER: "X-API-Key"
+      OPENVINO_EMBED_BEARER_TOKEN: "${OPENVINO_EMBED_BEARER_TOKEN:-}"
       ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
       ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
       WEAVER_LLM_BASE_URL: "http://host.docker.internal:11435"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
       EMBEDDINGS_BACKEND: "openvino"
-      TEXT_GENERATION_BACKEND: "tensorflow"
+      CDB_EMBED_IN_C: "1"
+      CDB_EMBED_REQUIRE_C: "1"
+      CDB_EMBED_DEVICE: "AUTO"
+      CDB_EMBED_STRICT_DEVICE: "1"
+      CDB_EMBED_PRELOAD_ORT_CORE: "1"
+      NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
+      NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
+      TEXT_GENERATION_BACKEND: "auto"
       TF_EMBED_HASH_BINS: "768"
+      SIM_PARTICLE_BACKEND: "cdb"
       SIM_SLICE_OFFLOAD_MODE: "uds"
       SIM_SLICE_ASYNC: "1"
       SIM_SLICE_ASYNC_STALE_MS: "60000"
@@ -302,15 +375,21 @@ services:
       - "18879:8787"
       - "18995:8793"
     cpus: "1.00"
-    mem_limit: "3000m"
-    memswap_limit: "3000m"
+    mem_limit: "24000m"
+    memswap_limit: "24000m"
     pids_limit: 188
+    gpus: all
+    devices:
+      - "/dev/accel:/dev/accel"
+      - "/dev/dri:/dev/dri"
     volumes:
       - .:/app
       - eta_mu_uds_world_state:/app/world_state
       - sim_slice_socket:/sim-socket
       - ../.opencode/runtime:/app/.opencode/runtime:ro
       - ../:/vault
+      - /usr/lib/x86_64-linux-gnu/libze_intel_npu.so:/usr/lib/x86_64-linux-gnu/libze_intel_npu.so:ro
+      - /usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:/usr/lib/x86_64-linux-gnu/libnpu_driver_compiler.so:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
