--- a/part64/frontend/package.json
+++ b/part64/frontend/package.json
@@ -14,6 +14,8 @@
     "test:e2e:headed": "playwright test --headed",
     "test:coverage": "vitest run --coverage --exclude e2e/**",
     "test:watch": "vitest --exclude e2e/**",
+    "mock:world": "node ./scripts/mock-world-server.mjs",
+    "capture:dummy-render": "node ./scripts/capture-dummy-render.mjs",
     "preview": "vite preview",
     "electron:dev": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 electron ./electron/main.mjs",
     "electron:dev:watch": "VITE_DEV_SERVER_URL=http://127.0.0.1:5173 nodemon --watch electron --ext mjs,js,cjs --signal SIGTERM --exec \"electron ./electron/main.mjs\"",
