feat(runtime): add probabilistic daimoi controls and runtime panel
Wire new simulation/runtime parameters through the backend catalog and frontend controls while extending coverage for runtime behavior. Ignore local cache directories and model weight artifacts so commits stay focused on code and documentation.

--- a/part64/docker-compose.yml
+++ b/part64/docker-compose.yml
@@ -44,10 +44,10 @@ services:
       TF_EMBED_HASH_BINS: "768"
       SIM_PARTICLE_BACKEND: "cdb"
       SIM_TICK_SECONDS: "0.08"
-      SIMULATION_WS_USE_CACHED_SNAPSHOTS: "1"
-      SIMULATION_WS_CACHE_REFRESH_SECONDS: "60.0"
+      SIMULATION_WS_USE_CACHED_SNAPSHOTS: "0"
+      SIMULATION_WS_CACHE_REFRESH_SECONDS: "0.75"
       SIMULATION_WS_CACHE_MAX_AGE_SECONDS: "86400.0"
-      SIMULATION_WS_SKIP_CATALOG_BOOTSTRAP: "1"
+      SIMULATION_WS_SKIP_CATALOG_BOOTSTRAP: "0"
       SIMULATION_WS_STREAM_VELOCITY_SCALE: "0.78"
       SIMULATION_WS_STREAM_DAIMOI_FRICTION: "0.994"
       SIMULATION_WS_STREAM_NEXUS_FRICTION: "0.872"
@@ -67,16 +67,28 @@ services:
       SIMULATION_WS_STREAM_JITTER_FORCE: "0.072"
       SIMULATION_WS_STREAM_SIMPLEX_SCALE: "2.05"
       SIMULATION_WS_STREAM_ORBIT_DECAY: "0.42"
-      SIMULATION_PRESENCE_PROFILE: "${SIMULATION_PRESENCE_PROFILE:-concept_cpu}"
-      SIMULATION_CORE_RESOURCES: "${SIMULATION_CORE_RESOURCES:-cpu}"
+      SIMULATION_PRESENCE_PROFILE: "${SIMULATION_PRESENCE_PROFILE:-full}"
+      SIMULATION_CORE_RESOURCES: "${SIMULATION_CORE_RESOURCES:-cpu,ram,disk,network,gpu,npu}"
       SIMULATION_CPU_DAIMOI_STOP_PERCENT: "${SIMULATION_CPU_DAIMOI_STOP_PERCENT:-75}"
-      CDB_TARGET_PARTICLES_PER_PRESENCE: "${CDB_TARGET_PARTICLES_PER_PRESENCE:-10}"
-      CDB_TARGET_FILE_SQRT_FACTOR: "${CDB_TARGET_FILE_SQRT_FACTOR:-5}"
-      CDB_TARGET_BASE_OFFSET: "${CDB_TARGET_BASE_OFFSET:-56}"
-      CDB_TARGET_MIN_COUNT: "${CDB_TARGET_MIN_COUNT:-72}"
-      CDB_TARGET_MAX_COUNT: "${CDB_TARGET_MAX_COUNT:-420}"
-      CDB_FORCE_WORKERS: "${CDB_FORCE_WORKERS:-6}"
-      CDB_COLLISION_WORKERS: "${CDB_COLLISION_WORKERS:-6}"
+      SIMULATION_CPU_SENTINEL_BURN_START_PERCENT: "${SIMULATION_CPU_SENTINEL_BURN_START_PERCENT:-90}"
+      SIMULATION_CPU_SENTINEL_BURN_MAX_MULTIPLIER: "${SIMULATION_CPU_SENTINEL_BURN_MAX_MULTIPLIER:-16}"
+      SIMULATION_CPU_SENTINEL_BURN_COST_MAX: "${SIMULATION_CPU_SENTINEL_BURN_COST_MAX:-0.8}"
+      SIMULATION_CPU_SENTINEL_ATTRACTOR_START_PERCENT: "${SIMULATION_CPU_SENTINEL_ATTRACTOR_START_PERCENT:-90}"
+      SIMULATION_CPU_SENTINEL_ATTRACTOR_GAIN: "${SIMULATION_CPU_SENTINEL_ATTRACTOR_GAIN:-2.0}"
+      SIMULATION_CPU_SENTINEL_ATTRACTOR_RESOURCE_BOOST: "${SIMULATION_CPU_SENTINEL_ATTRACTOR_RESOURCE_BOOST:-5.0}"
+      SIMULATION_CPU_SENTINEL_ATTRACTOR_ALL_DAIMOI: "${SIMULATION_CPU_SENTINEL_ATTRACTOR_ALL_DAIMOI:-1}"
+      CDB_TARGET_PARTICLES_PER_PRESENCE: "${CDB_TARGET_PARTICLES_PER_PRESENCE:-120}"
+      CDB_TARGET_FILE_SQRT_FACTOR: "${CDB_TARGET_FILE_SQRT_FACTOR:-48}"
+      CDB_TARGET_BASE_OFFSET: "${CDB_TARGET_BASE_OFFSET:-4096}"
+      CDB_TARGET_MIN_COUNT: "${CDB_TARGET_MIN_COUNT:-4096}"
+      CDB_TARGET_MAX_COUNT: "${CDB_TARGET_MAX_COUNT:-24000}"
+      CDB_FORCE_WORKERS: "${CDB_FORCE_WORKERS:-12}"
+      CDB_COLLISION_WORKERS: "${CDB_COLLISION_WORKERS:-12}"
+      CDB_SIM_FLAGS: "${CDB_SIM_FLAGS:-1}"
+      CDB_FORCE_SLEEP_US: "${CDB_FORCE_SLEEP_US:-0}"
+      CDB_CHAOS_SLEEP_US: "${CDB_CHAOS_SLEEP_US:-0}"
+      CDB_INTEGRATE_SLEEP_US: "${CDB_INTEGRATE_SLEEP_US:-0}"
+      CDB_SEMANTIC_SLEEP_US: "${CDB_SEMANTIC_SLEEP_US:-0}"
       CDB_BH_THETA: "${CDB_BH_THETA:-0.62}"
       CDB_BH_LEAF_CAP: "${CDB_BH_LEAF_CAP:-8}"
       CDB_BH_MAX_DEPTH: "${CDB_BH_MAX_DEPTH:-12}"
