--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fork-tax:audit": "node contracts/contract_fork_tax_git_v1.mjs --audit",
     "fork-tax:cycle": "node contracts/contract_fork_tax_git_v1.mjs --cycle",
     "fork-tax:test": "node contracts/contract_fork_tax_git_v1.mjs --test",
+    "typecheck": "python part64/scripts/python_c_quality_gate.py --mode warn",
     "lint:py-c": "python part64/scripts/python_c_quality_gate.py --mode warn",
     "lint:py-c:strict": "python part64/scripts/python_c_quality_gate.py --mode strict"
   },
