refactor(runtime): modularize simulation/app shell and reorganize notes
Split world_web and frontend app-shell logic into focused, test-covered modules and move timestamped notes into categorized paths so maintenance and review stay manageable as the runtime grows.

--- a/part64/frontend/package.json
+++ b/part64/frontend/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "typecheck": "tsc -b --pretty false",
+    "typecheck:strict": "tsc -p tsconfig.strict.json --pretty false",
     "lint": "eslint .",
-    "lint:strict": "npm run typecheck && npm run lint && eslint . --config eslint.config.strict.js --max-warnings 0",
+    "lint:strict": "npm run typecheck:strict && eslint . --config eslint.config.strict.js --max-warnings 0",
     "test": "vitest run --exclude e2e/**",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
