feat(crawler): add GitHub crawler and Muse grounding infrastructure
- Add GitHub presence, fetcher, and extractor modules for web crawling
- Add graph query endpoints for neighbors, search, URL status, resource summary
- Implement facts snapshot with JSONL table exports
- Add trail buffer and reinforcement deposition for daimoi outcomes
- Add demo script for daimoi-crawler-Muse workflow
- Reorganize implementation notes to docs/notes/implementation/
- Add GitHub seeds config for crawler
- Update tests and receipts

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ tmp/
 part64/world_state/*.json
 part64/world_state/*.jsonl
 part64/world_state/*.log
+part64/world_state/facts/
 part64/world_state/chroma_data/
 part64/world_state/tts_cache/
 
