--- a/part64/docker-compose.yml
+++ b/part64/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       OPENVINO_EMBED_MAX_CHARS: "2400"
       ETA_MU_TEXT_EMBED_MODEL: "nomic-embed-text"
       ETA_MU_IMAGE_EMBED_MODEL: "nomic-embed-text"
-      WEAVER_LLM_ENABLED: "0"
+      WEAVER_LLM_ENABLED: "${WEAVER_LLM_ENABLED:-1}"
       WEAVER_LLM_MODEL: "qwen3-vl:2b-instruct"
       WEAVER_LLM_TIMEOUT_MS: "30000"
       EMBEDDINGS_BACKEND: "openvino"
@@ -38,9 +38,17 @@ services:
       NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
       TORCH_EMBED_MODEL: "nomic-ai/nomic-embed-text-v1.5"
       TEXT_GENERATION_BACKEND: "vllm"
-      TEXT_GENERATION_BASE_URL: "${TEXT_GENERATION_BASE_URL:-http://host.docker.internal:18000}"
+      TEXT_GENERATION_BASE_URL: "${TEXT_GENERATION_BASE_URL:-http://host.docker.internal:11435}"
+      TEXT_GENERATION_AUTH_HEADER: "${TEXT_GENERATION_AUTH_HEADER:-}"
+      TEXT_GENERATION_BEARER_TOKEN: "${TEXT_GENERATION_BEARER_TOKEN:-change-me-proxy-key}"
+      TEXT_GENERATION_API_KEY: "${TEXT_GENERATION_API_KEY:-}"
+      TEXT_GENERATION_API_KEY_HEADER: "${TEXT_GENERATION_API_KEY_HEADER:-X-API-Key}"
       ETA_MU_IMAGE_VISION_ENABLED: "${ETA_MU_IMAGE_VISION_ENABLED:-1}"
-      ETA_MU_IMAGE_VISION_BASE_URL: "${ETA_MU_IMAGE_VISION_BASE_URL:-http://host.docker.internal:18000}"
+      ETA_MU_IMAGE_VISION_BASE_URL: "${ETA_MU_IMAGE_VISION_BASE_URL:-http://host.docker.internal:11435}"
+      ETA_MU_IMAGE_VISION_AUTH_HEADER: "${ETA_MU_IMAGE_VISION_AUTH_HEADER:-}"
+      ETA_MU_IMAGE_VISION_BEARER_TOKEN: "${ETA_MU_IMAGE_VISION_BEARER_TOKEN:-change-me-proxy-key}"
+      ETA_MU_IMAGE_VISION_API_KEY: "${ETA_MU_IMAGE_VISION_API_KEY:-}"
+      ETA_MU_IMAGE_VISION_API_KEY_HEADER: "${ETA_MU_IMAGE_VISION_API_KEY_HEADER:-X-API-Key}"
       TF_EMBED_HASH_BINS: "768"
       SIM_PARTICLE_BACKEND: "cdb"
       SIM_TICK_SECONDS: "0.12"
@@ -58,7 +66,7 @@ services:
       SIMULATION_WS_CHUNK_CHARS: "96000"
       SIMULATION_WS_CHUNK_DELTA_MIN_CHARS: "262144"
       SIMULATION_WS_STREAM_VELOCITY_SCALE: "0.78"
-      SIMULATION_WS_STREAM_DAIMOI_FRICTION: "0.994"
+      SIMULATION_WS_STREAM_DAIMOI_FRICTION: "0.996"
       SIMULATION_WS_STREAM_NEXUS_FRICTION: "0.872"
       SIMULATION_WS_STREAM_MAX_SPEED: "0.092"
       SIMULATION_WS_STREAM_NEXUS_MAX_SPEED_SCALE: "0.26"
