feat(runtime): strengthen threat radar and runtime signal grounding

--- a/part64/docker-compose.yml
+++ b/part64/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       TEXT_GENERATION_BEARER_TOKEN: "${TEXT_GENERATION_BEARER_TOKEN:-change-me-proxy-key}"
       TEXT_GENERATION_API_KEY: "${TEXT_GENERATION_API_KEY:-}"
       TEXT_GENERATION_API_KEY_HEADER: "${TEXT_GENERATION_API_KEY_HEADER:-X-API-Key}"
+      GH_TOKEN: "${GH_TOKEN:-}"
+      GITHUB_TOKEN: "${GITHUB_TOKEN:-}"
       ETA_MU_IMAGE_VISION_ENABLED: "${ETA_MU_IMAGE_VISION_ENABLED:-1}"
       ETA_MU_IMAGE_VISION_BASE_URL: "${ETA_MU_IMAGE_VISION_BASE_URL:-http://host.docker.internal:11435}"
       ETA_MU_IMAGE_VISION_AUTH_HEADER: "${ETA_MU_IMAGE_VISION_AUTH_HEADER:-}"
@@ -123,6 +125,15 @@ services:
       RUNTIME_CATALOG_SUBPROCESS_ENABLED: "0"
       RUNTIME_ETA_MU_SYNC_ENABLED: "0"
       RUNTIME_ETA_MU_SYNC_SECONDS: "300.0"
+      MUSE_RUNTIME_BACKEND: "${MUSE_RUNTIME_BACKEND:-json}"
+      MUSE_RUNTIME_STATE_PATH: "${MUSE_RUNTIME_STATE_PATH:-/app/world_state/muse_runtime_state.json}"
+      MUSE_RUNTIME_TURNS_PER_MINUTE: "${MUSE_RUNTIME_TURNS_PER_MINUTE:-60}"
+      MUSE_THREAT_RADAR_ENABLED: "${MUSE_THREAT_RADAR_ENABLED:-1}"
+      MUSE_THREAT_RADAR_MUSE_ID: "${MUSE_THREAT_RADAR_MUSE_ID:-github_security_review}"
+      MUSE_THREAT_RADAR_LABEL: "${MUSE_THREAT_RADAR_LABEL:-GitHub Threat Radar}"
+      MUSE_THREAT_RADAR_INTERVAL_SECONDS: "${MUSE_THREAT_RADAR_INTERVAL_SECONDS:-45}"
+      MUSE_THREAT_RADAR_TOKEN_BUDGET: "${MUSE_THREAT_RADAR_TOKEN_BUDGET:-1400}"
+      MUSE_THREAT_RADAR_PROMPT: "${MUSE_THREAT_RADAR_PROMPT:-/facts /graph github_threat_radar 1440 24}"
     labels:
       io.fork_tales.simulation: "true"
       io.fork_tales.simulation.role: "world-runtime"
